[package]
name = "glass-pane"
version = "0.1.0"
authors = ["Laura Demkowicz-Duffy <laura@laurademkowiczduffy.co.uk>"]
edition = "2018"

[dependencies]
prometheus = "0.11.0"
rcon = "0.3.1"
env_logger = "0.8.2"
uuid = "0.8.1"
serde_yaml = "0.8.14"

[dependencies.tokio]
version = "0.3.5"
features = ["full"]

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
