[package]
name = "glass-pane"
version = "0.1.0"
authors = ["Laura Demkowicz-Duffy <laura@laurademkowiczduffy.co.uk>"]
edition = "2018"

[dependencies]
prometheus = "0.11.0"
log = "0.4.0"
env_logger = "0.8.2"
uuid = "0.8.1"
serde_yaml = "0.8.14"
serde_json = "1.0.60"
reqwest = "0.10.9"
lazy_static = "1.4.0"

[features]
commands = ["rcon"]

[dependencies.tokio]
# Use outdated version to avoid compatibility issues with reqwest
version = "0.2.23"
features = ["full"]

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.rcon]
version = "0.3.1"
optional = true
